--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,7 +1,28 @@
 .App {
   text-align: center;
-
+  padding:0;
+  margin:0;
+  box-sizing: border-box;
+  grid-template-rows: 1fr auto 2fr;
 }
+:root{
+  --black:black;
+  /* colors */
+}
+.header{
+  background-color: antiquewhite;
+}
+.footer{
+  background-color: beige;
+}
+.main{
+  background-color: cadetblue;
+}
+
+
+
+
+
 
 
 
