--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -15,6 +15,7 @@
 
   /* colors */
 }
+
 #root{
   height: 100vh;
 }
@@ -39,6 +40,14 @@ header{
   background-color:#e0e5e9;
   justify-content: space-evenly;
 }
+.favPage{
+  height: 100vh;
+  width: 100%;
+}
+.cardPage{
+  height: 100vh;
+  width: 100%;
+}
 .main{
   height: 100vh;
   width: 100%;
@@ -59,6 +68,7 @@ header{
 font-size: 2rem;
   color: #343a40;
 }
+
 .registerSection{
   display: flex;
   gap: 20%;
