--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -5,14 +5,16 @@
 
 }
 :root{
-  --pag:#adb5bd;
-  --darkerPage:#949493;
-  --lightPag:#e9f1e9;
+  --buttonColor:#f6eee5;
+  --brown:#8b7e72;
+  --lightBrown:#a1887f;
+  --lightPag:#d7ccc8;
+  --pag:#efebe9;
+  --fontColor:#efebe9;
   --gray:#343a40;
   --meduimGray:#343a40;
   --black:black;
   --darkBrown:#92140c;
-
   /* colors */
 }
 
@@ -22,8 +24,8 @@
 .App {
   display: grid;
   grid-template-rows: 2fr 10fr;
-  color: white;
-  background-color: var(--gray);
+  color: var(--pag);
+  background-color: var(--lightBrown);
   font-size: 20px;
   text-align: center;
   padding:0;
@@ -37,7 +39,7 @@ header{
   font-size: 18px;
   display: flex;
   
-  background-color:#e0e5e9;
+  background-color:var(--lightBrown);
   justify-content: space-evenly;
 }
 .favPage{
@@ -52,7 +54,7 @@ header{
   height: 100vh;
   width: 100%;
 }
-.link{
+.link, .name{
   color:var(--meduimGray);
   text-decoration: none;
 
@@ -89,24 +91,23 @@ font-size: 2rem;
   height: 100%;
 }
 .searchSign{
-  color: #e9f1e9;
- width: 10%;
- font-size: 1.5rem;
+color: #e9f1e9;
+width: 10%;
+font-size: 1.5rem;
 }
 /* ............header.............. */
-
 .categoriesPage{
   margin-top: 5%;
-  background-color: #e9f1e9;
-  border: #92140c 1px solid;
+  background-color:  var(--lightPag);
   display: flex;
   justify-content: center;
- 
   gap: 3%;
   width:100%;
   
 }
 .categoryElement{
+  border-radius: 10%;
+  background-color:  var(--lightBrown);
   border: #92140c 13px solid;
   cursor: pointer;
   color: #151615;
