--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -19,7 +19,6 @@
 }
 
 .App{
-  height: 100vh;
   background-color: var(--lightBrown);
   justify-content: center;
   width: 100%;   
@@ -60,7 +59,6 @@ border-bottom: 2px solid white;
   width: 100%;
   display: flex;
   flex-wrap: wrap;
- 
 }
 .link, .name{
   font-family: "Edu AU VIC WA NT Pre", serif;
@@ -114,6 +112,10 @@ color: #e9f1e9;
 width: 10%;
 font-size: 1.5rem;
 }
+.search:hover{
+  background-color: var(--lightPag);
+}
+
 /* ............header.............. */
 .categoriesPage{
   font-family: "Edu AU VIC WA NT Pre", serif;
@@ -124,6 +126,7 @@ font-size: 1.5rem;
   background-color:  var(--lightPag);
   gap: 3%;
   width: fit-content;
+  height: 60%;
   position: relative;
   justify-content: center;
   display: flex;
@@ -135,7 +138,7 @@ font-size: 1.5rem;
 .categoryElement{
   border-radius: 10%;
   background-color:  var(--lightBrown);
-  border: #92140c 13px solid;
+  
   cursor: pointer;
   color: #151615;
   font-size: 15px;
@@ -157,42 +160,112 @@ font-size: 1.5rem;
 /* ...........categoriesPage.............. */
 .category{
   display: flex;
-
- flex-wrap: wrap;
-  height: 100vh;
-  width: 100%;
-  justify-content: center;
-
+  flex-wrap: wrap;
+  width:100%;
+  padding: 0;
+  justify-content: center; 
  /*  grid-template-columns:; */
 }
 .product{
-  width: 30%;
-  height: 60%;
+ 
+  background-color: var(--lightPag);
+  margin: 0;
+  padding: 0;
+  width: 20%;
+  height: 40%;
+  border-radius: 5%;
+  text-align: center;
+  margin: 1%;
+  border-radius: 10%;
+  border: transparent;
+  cursor: pointer;
+  color: #151615;
+  font-size: 15px;
+  text-indent: .5px;
 
 }
+/* .product:hover{
+  border: 15px solid white;
+
+} */
 .singleImage{
+ 
+
   width:100%;
-  height: 100%;
+  height: 260px;
 
 }
+.productCode, .productTitle ,.price{
+  font-family: "Edu AU VIC WA NT Pre", serif;
+  font-optical-sizing: auto;
+  font-weight: 800;
+  font-style: normal;
+}
+.price ,.productTitle{
+  font-size: 20px;
 
+}
+/*  .back{
+  transform: rotate(50deg);
+  height: 70%;
+  width:100%;
+  background-image: url("https://res.cloudinary.com/drhlmb3qr/image/upload/v1736267538/Premium_jersey_hxsnpi.jpg");
 
-
+}   */
 /* --page of each category--- */
 
 .productPage{
-  height: 100vh;
+  position: relative;
+  left: 10%;
+  justify-items: center; 
+  width: 80%;
+  height: 100%;
+  display: flex;
+  gap: 3%;
+
+} 
+.productImages{
+  width: 100%;
+  display: flex;
+  flex-direction: row;
 }
+.pic{
+  height:500px;
+
+}
+
+
+
 .slide{
   height: 50%;
 }
 .heart{
+  font-size: 50px;
   cursor: pointer;
-  position: relative;
-  top: 15%;
+  position: absolute;
+  top: 9%;
   z-index: 2;
-  right: 40%;
+  left: 10%;
 }
-
+.productButton{
+  display: flex;
+  gap: 4%;
+}
+.card{
+  padding: 2%;
+  background-color: var(--darkBrown);
+  width: 70%;
+  height: 30%;
+}
+.colorImage{
+  width:20px;
+  height: 20px;
+}
+.card:hover{
+  background-color: var(--pag);
+}
+.colors{
+  display: flex;
+}
 
 /* --page of each product--- */
